--- a/frontend/src/app/web/pages/web-create/select-template/select-template.component.html
+++ b/frontend/src/app/web/pages/web-create/select-template/select-template.component.html
@@ -11,6 +11,11 @@
           <button type="button" class="btn btn-secondary">Vybrat šablonu</button>
         </a>
       </div>
+      <div class="template-container d-flex justify-content-center m-2">
+        <a class="align-self-end create-button mb-1" [routerLink]="['../create-name', 0]">
+          <button type="button" class="btn btn-secondary">Vybrat šablonu</button>
+        </a>
+      </div>
     </div>
   </div>
 </div>
