--- a/frontend/src/app/page/pages/page-create/page-create.component.html
+++ b/frontend/src/app/page/pages/page-create/page-create.component.html
@@ -5,18 +5,18 @@
   <div class="card-body">
     <form [formGroup]="createPageForm">
       <app-global-form-error></app-global-form-error>
-      <label for="name">Název stráky:</label>
-      <input appFormError (keyup)="refreshUrlInput($event)" type="text" class="form-control" placeholder="Název stránky" formControlName="name" id="name">
-      <label class="mt-3" for="url">Url stráky:</label>
-      <input appFormError type="text" class="form-control" placeholder="Url stránky" formControlName="url" id="url">
+      <label for="name" class="form-label">Název stráky:</label>
+      <input appFormError (keyup)="refreshUrlInput($event)" type="text" class="form-control" formControlName="name" id="name">
+      <label class="mt-3 form-label" for="url">Url stráky:</label>
+      <input appFormError type="text" class="form-control" formControlName="url" id="url">
       <div class="form-check">
         <input class="form-check-input" type="checkbox" formControlName="homePage" id="homepage">
         <label class="form-check-label" for="homepage">
           Přistávací stránka
         </label>
       </div>
-      <label class="mt-3" for="description">Popis stráky:</label>
-      <textarea appFormError type="text" class="form-control" placeholder="Popis stránky" formControlName="description" id="description"></textarea>
+      <label class="mt-3 form-label" for="description">Popis stráky:</label>
+      <textarea appFormError type="text" class="form-control" formControlName="description" id="description"></textarea>
       <div class="container-fluid mt-3">
         <div class="d-flex justify-content-end">
           <a [routerLink]="route.snapshot.url[0].path === 'create' ? ['../list'] : ['../../list']" [replaceUrl]="true" mat-button>Zpět na seznam stránek</a>
