--- a/frontend/src/app/web/pages/web-create/create-name/create-name.component.html
+++ b/frontend/src/app/web/pages/web-create/create-name/create-name.component.html
@@ -6,11 +6,11 @@
     <form [formGroup]="form">
       <div class="d-flex justify-content-center">
         <div class="d-flex flex-column wrapper">
-          <div appFormError>
+          <div appFormError class="mb-3">
             <label for="name" class="form-label">Název webu (slouží jako název webu v seznamu všech webů):</label>
             <input type="text" class="form-control" id="name" formControlName="name">
           </div>
-          <div class="text-center">
+          <div class="text-center mb-3">
             <button type="submit" class="btn btn-secondary mt-2">Vytvořit web!</button>
           </div>
         </div>
