--- a/frontend/src/app/authorization/components/registration/registration.component.html
+++ b/frontend/src/app/authorization/components/registration/registration.component.html
@@ -1,19 +1,19 @@
 <p class="login-box-msg">Registrace do systému</p>
-<div class="social-auth-links text-center">
+<div class="social-auth-links">
   <p *ngIf="activationSend">
     Registrace proběhla úspěšně, na email vám byl zaslán odkaz pro aktivaci vašeho nového účtu.
   </p>
   <form *ngIf="!activationSend" [formGroup]="registrationForm">
-    <div appFormError class="form-group">
-      <div #errorFormContainer class="input-group mb-3">
+    <div appFormError class="form-group mb-3">
+      <div #errorFormContainer class="input-group">
         <input type="text" class="form-control" placeholder="Celé jméno" formControlName="fullName">
           <div class="input-group-text">
             <span class="fas fa-user"></span>
           </div>
       </div>
     </div>
-    <div appFormError class="form-group">
-      <div #errorFormContainer class="input-group mb-3">
+    <div appFormError class="form-group mb-3">
+      <div #errorFormContainer class="input-group">
         <input type="email" class="form-control" placeholder="Email" formControlName="email">
           <div class="input-group-text">
             <span class="fas fa-envelope"></span>
@@ -21,16 +21,16 @@
         </div>
     </div>
     <div formGroupName="password">
-      <div appFormError class="form-group">
-        <div #errorFormContainer class="input-group mb-3">
+      <div appFormError class="form-group mb-3">
+        <div #errorFormContainer class="input-group">
           <input type="password" class="form-control" placeholder="Heslo" formControlName="first">
             <div class="input-group-text">
               <span class="fas fa-lock"></span>
             </div>
         </div>
       </div>
-      <div appFormError class="form-group">
-        <div #errorFormContainer class="input-group mb-3">
+      <div appFormError class="form-group mb-3">
+        <div #errorFormContainer class="input-group">
           <input type="password" class="form-control" placeholder="Heslo znovu" formControlName="second">
             <div class="input-group-text">
               <span class="fas fa-lock"></span>
@@ -47,5 +47,7 @@
     </div>
   </form>
   <br>
-  <a [routerLink]="['../login']" class="text-center">Přihlásit se</a>
+  <div class="text-center">
+    <a [routerLink]="['../login']" class="text-center">Přihlásit se</a>
+  </div>
 </div>
