--- a/frontend/src/app/layout/components/layout/layout.component.html
+++ b/frontend/src/app/layout/components/layout/layout.component.html
@@ -163,14 +163,14 @@
 
     <!-- Main content -->
 
-    <section class="content">
+    <div class="content">
       <div class="container-fluid">
         <!-- Small boxes (Stat box) -->
 
         <router-outlet></router-outlet>
 
       </div><!-- /.container-fluid -->
-    </section>
+    </div>
   </div>
   <!-- /.content -->
   <!-- /.content-wrapper -->
