--- a/frontend/src/app/page/components/palette-builder/palette-builder.component.html
+++ b/frontend/src/app/page/components/palette-builder/palette-builder.component.html
@@ -9,7 +9,7 @@
   </div>
   <div class="card-body palette" [class.sortable-js-dragged]="dragStatusService.isDraggedResizedPlugin()">
     <ul
-      class="palette-block list-group listing-area clearfix"
+      class="palette-block list-group listing-area clearfix root-page"
       [class.dragged]="dragStatusService.isDragBlock"
       [class.resized]="isResized"
       #palette
