--- a/frontend/src/app/public/pages/public/public.component.html
+++ b/frontend/src/app/public/pages/public/public.component.html
@@ -1,4 +1,4 @@
-<div class="container-wrap">
+<div class="container-wrap root-page">
   <app-public-page-block [pageBlock]="pageBlock" *ngFor="let pageBlock of pageDetail.pageBlocks">
   </app-public-page-block>
 </div>
