--- a/frontend/src/app/page/components/menu-builder/menu-builder.component.css
+++ b/frontend/src/app/page/components/menu-builder/menu-builder.component.css
@@ -16,7 +16,7 @@
   padding: 4px;
   width: 45%;
   text-align: center;
-  font-size: 15px;
+  font-size: 1rem;
   border-radius: 3px;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2);
   margin: 6px;
