--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-* {
-  font-size: 0.94rem;
+html {
+  font-size: 14px;
 }
 
 .material-icons {
