--- a/frontend/src/app/plugins/form/pages/form-data-admin/form-data-admin.component.html
+++ b/frontend/src/app/plugins/form/pages/form-data-admin/form-data-admin.component.html
@@ -1,3 +1,4 @@
 <div *ngFor="let data of formData">
   <p><b>{{data.createdAt}}:</b> {{toJson(data.data)}}</p>
 </div>
+<button (click)="downloadCsvData()" type="button" class="btn btn-primary">Stáhnout CSV</button>
