--- a/frontend/src/app/plugins/form/pages/form-admin/form-admin.component.html
+++ b/frontend/src/app/plugins/form/pages/form-admin/form-admin.component.html
@@ -1,1 +1,5 @@
-<app-form-builder [formRawData] = "settings.form" (refresh)="refreshView()"></app-form-builder>
+<div class="card">
+  <div class="card-body">
+    <app-form-builder [formRawData] = "settings.form" (refresh)="refreshView()"></app-form-builder>
+  </div>
+</div>
