--- a/frontend/src/app/plugins/form/pages/form-data-admin/form-data-admin.component.html
+++ b/frontend/src/app/plugins/form/pages/form-data-admin/form-data-admin.component.html
@@ -1,4 +1,9 @@
-<div *ngFor="let data of formData">
-  <p><b>{{data.createdAt}}:</b> {{toJson(data.data)}}</p>
+<div class="card">
+  <div class="card-body">
+    <div *ngFor="let data of formData">
+      <p><b>{{data.createdAt}}:</b> {{toJson(data.data)}}</p>
+    </div>
+    <button (click)="downloadCsvData()" type="button" class="btn btn-primary">Stáhnout CSV</button>
+    <button (click)="removeData()" type="button" class="btn btn-primary ms-1">Smazat data</button>
+  </div>
 </div>
-<button (click)="downloadCsvData()" type="button" class="btn btn-primary">Stáhnout CSV</button>
