--- a/frontend/src/app/layout/components/layout/layout.component.html
+++ b/frontend/src/app/layout/components/layout/layout.component.html
@@ -16,7 +16,7 @@
       </ul>
     </div>
     <div class="col-4 text-center">
-      <div>Spravujete web: <b>{{webDetailResolverService.webDetail.name}}</b> (<a [routerLink]="['./web/list']">Správa webů</a>) </div>
+      <div>Spravujete web: <b>{{webDetailResolverService.webDetail.name}}</b> </div>
     </div>
     <div class="col-4">
       <ul class="navbar-nav float-end">
