--- a/frontend/src/app/web/pages/web-create/web-create.component.html
+++ b/frontend/src/app/web/pages/web-create/web-create.component.html
@@ -3,10 +3,10 @@
     <h3 class="card-title">{{title.getTitle()}}</h3>
   </div> <!-- /.card-body -->
   <div class="card-body">
-    <form [formGroup]="createWebForm">
+    <form [formGroup]="createWebForm" (ngSubmit)="onSubmit()">
       <app-global-form-error></app-global-form-error>
       <label for="webName" class="form-label">Název webu</label>
-      <input id="webName" appFormError type="text" class="form-control" placeholder="Název webu" formControlName="name">
+      <input id="webName" appFormError type="text" class="form-control mb-3" placeholder="Název webu" formControlName="name">
       <ng-container *ngIf="createWebForm.contains('isTemplate')">
         <div class="form-check">
           <input class="form-check-input" id="help-text1" type="checkbox" formControlName="isTemplate">
@@ -15,14 +15,22 @@
       </ng-container>
       <label class="form-label">Doména:</label>
       <div formArrayName="domains">
-        <div *ngFor="let domain of domains.controls; let i=index" [formGroupName]="i">
-          <input appFormError placeholder="Např: domena.cz" type="text" formControlName="name" class="form-control">
+        <div *ngFor="let domain of domains.controls; let i=index" [formGroupName]="i" class="mb-2">
+          <div class="input-group m" appFormError>
+            <input (input)="refreshWebInput($event, i)" placeholder="Např: domena.cz" type="text" formControlName="name" class="form-control">
+            <fa-icon [matTooltip]="'Odebrat doménu'" role="button" (click)="webFormService.removeDomain(createWebForm, i)" [icon]="faMinus" class="input-group-text"></fa-icon>
+          </div>
+        </div>
+        <div>
+          <button (click)="webFormService.addDomain(createWebForm)" type="button" class="btn btn-light">
+            <fa-icon [matTooltip]="'Přidat doménu'" [icon]="faPlus" class=""></fa-icon>
+          </button>
         </div>
       </div>
 
       <div class="container-fluid mt-3">
         <div class="d-flex justify-content-end">
-          <a [routerLink]="route.snapshot.url[0].path === 'create' ? ['../list'] : ['../../list']" [replaceUrl]="true" mat-button>Zpět na seznam webů</a>
+          <a [routerLink]="route.snapshot.url[0].path === 'create' ? ['../list'] : ['../../list']" [replaceUrl]="true" mat-button><<< Zpět na seznam webů</a>
           <button type="submit" mat-raised-button color="primary" class="ml-2"><i class="material-icons">add</i>Uložit
           </button>
         </div>
