--- a/frontend/src/app/web/pages/web-list/web-list.component.html
+++ b/frontend/src/app/web/pages/web-list/web-list.component.html
@@ -28,6 +28,7 @@
     </table>
     <div class="container-fluid mt-3">
       <div class="d-flex justify-content-end">
+        <a [routerLink]="['../..']" [replaceUrl]="true" mat-button><<< Zpět na seznam stránek</a>
         <button routerLink="../select-template" mat-raised-button color="primary"><mat-icon>add</mat-icon>Přidat web
         </button>
       </div>
