--- a/frontend/src/app/dashboard/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/components/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
                 </ng-container>
                 <ng-container matColumnDef="createdAt">
                   <th mat-header-cell *matHeaderCellDef>Vytvořeno</th>
-                  <td mat-cell *matCellDef="let row">{{row.createdAt | date}}</td>
+                  <td mat-cell *matCellDef="let row">{{row.createdAt}}</td>
                 </ng-container>
                 <ng-container matColumnDef="pagesCount">
                   <th mat-header-cell *matHeaderCellDef>Počet stránek</th>
@@ -24,7 +24,7 @@
                 </ng-container>
                 <ng-container matColumnDef="public">
                   <th mat-header-cell *matHeaderCellDef>Publikováno</th>
-                  <td mat-cell *matCellDef="let row">{{row.public}}</td>
+                  <td mat-cell *matCellDef="let row">{{row.public ? 'Ano' : 'Ne'}}</td>
                 </ng-container>
                 <ng-container matColumnDef="domain">
                   <th mat-header-cell *matHeaderCellDef>Doména</th>
@@ -36,6 +36,9 @@
               </table>
             }
           </div>
+        </div>
+        <div class="ps-3">
+          <div><a [routerLink]="['./web/list']">Správa webů</a></div>
         </div>
       </div>
       <div class="col-md-4">
