--- a/frontend/src/app/layout/components/menu/menu.component.html
+++ b/frontend/src/app/layout/components/menu/menu.component.html
@@ -4,7 +4,7 @@
        [routerLinkActiveOptions]="{exact: true}" class="nav-link">
       <fa-icon [icon]="faHouseCrack" class="nav-icon"></fa-icon>
       <p>
-        Seznam webů
+        Přehled webů
       </p>
     </a>
   </li>
@@ -34,7 +34,7 @@
   </li>
   <li class="nav-item">
     <a routerLink="file" routerLinkActive="active" class="nav-link" (click)="title.setTitle('Soubory')">
-      <fa-icon [icon]="faFiles" class="nav-icon"></fa-icon>
+      <fa-icon [icon]="faFolder" class="nav-icon"></fa-icon>
       <p>
         Soubory
       </p>
