--- a/frontend/src/app/dashboard/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/components/dashboard/dashboard.component.html
@@ -32,7 +32,7 @@
                 </ng-container>
                 <ng-container matColumnDef="id">
                   <th mat-header-cell *matHeaderCellDef>Spravujete</th>
-                  <td mat-cell *matCellDef="let row" class="text-center">
+                  <td mat-cell *matCellDef="let row">
                     @if (webDetailResolverService.selectedId == row.id)
                     {
                       <fa-icon style="color:#EAC452;" [icon]="faCircleCheck" class="nav-icon"></fa-icon>
