--- a/frontend/src/app/file/components/file/file.component.html
+++ b/frontend/src/app/file/components/file/file.component.html
@@ -1,6 +1,6 @@
-<div class="card card-primary card-outline">
+<div class="card card-outline">
   <div class="card-header">
-    <h3 class="card-title">Nahrané soubory</h3>
+    <div class="card-title">Nahrané soubory</div>
   </div> <!-- /.card-body -->
   <div class="card-body">
     <app-file-manager></app-file-manager>
