--- a/frontend/src/app/page/components/menu-builder/menu-builder.component.html
+++ b/frontend/src/app/page/components/menu-builder/menu-builder.component.html
@@ -1,7 +1,7 @@
-<div class="card card-primary card-outline card-tabs">
+<div class="card card-outline card-tabs">
   <div class="card-header p-0 pt-1 border-bottom-0">
     <div class="card-header">
-      <h3 class="card-title">Stavební prvky</h3>
+      <div class="card-title">Stavební prvky</div>
     </div> <!-- /.card-body -->
     <ul class="nav nav-tabs" id="myTab" role="tablist">
       <li class="nav-item" role="presentation">
@@ -79,7 +79,7 @@
     </div>
   </div>
 
-  <div class="lock" (click)="locked = !locked">
-    <mat-icon>{{locked ? 'lock' : 'lock_open'}}</mat-icon>
-  </div>
+<!--  <div class="lock" (click)="locked = !locked">-->
+<!--    <mat-icon>{{locked ? 'lock' : 'lock_open'}}</mat-icon>-->
+<!--  </div>-->
 </div>
