--- a/frontend/src/app/plugin/pages/create-plugin/create-plugin.component.html
+++ b/frontend/src/app/plugin/pages/create-plugin/create-plugin.component.html
@@ -1,6 +1,6 @@
-<div class="card card-primary card-outline">
+<div class="card card-outline">
   <div class="card-header">
-    <h3 class="card-title">Vytvořit plugin {{pluginResolver.name}}</h3>
+    <div class="card-title">Vytvořit plugin {{pluginResolver.name}}</div>
   </div> <!-- /.card-body -->
   <div class="card-body">
     <form [formGroup]="createForm">
