--- a/frontend/src/app/plugin/pages/list-available/list-available.component.html
+++ b/frontend/src/app/plugin/pages/list-available/list-available.component.html
@@ -1,6 +1,6 @@
-<div class="card card-primary card-outline">
+<div class="card card-outline">
   <div class="card-header">
-    <h3 class="card-title">Seznam pluginů</h3>
+    <div class="card-title">Seznam pluginů</div>
   </div> <!-- /.card-body -->
   <div class="card-body">
     <table mat-table [dataSource]="allPlugins" class="w-100">
