--- a/frontend/src/app/web/pages/web-create/web-create.component.html
+++ b/frontend/src/app/web/pages/web-create/web-create.component.html
@@ -1,6 +1,6 @@
-<div class="card card-primary card-outline">
+<div class="card card-outline">
   <div class="card-header">
-    <h3 class="card-title">{{title.getTitle()}}</h3>
+    <div class="card-title">{{title.getTitle()}}</div>
   </div> <!-- /.card-body -->
   <div class="card-body">
     <form [formGroup]="createWebForm" (ngSubmit)="onSubmit()">
