--- a/frontend/src/app/web/pages/web-list/web-list.component.html
+++ b/frontend/src/app/web/pages/web-list/web-list.component.html
@@ -1,6 +1,6 @@
-<div class="card card-primary card-outline">
+<div class="card card-outline">
   <div class="card-header">
-    <h3 class="card-title">Seznam vytvořených webů</h3>
+    <div class="card-title">Seznam vytvořených webů</div>
     <p class="small text-danger" *ngIf="webListGuard.isBlocked">
       Pro pokračování je nutné vytvořit alespoň jeden web.
     </p>
