--- a/frontend/src/app/core/components/mini-admin/mini-admin.component.html
+++ b/frontend/src/app/core/components/mini-admin/mini-admin.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row sidebar-dark-primary">
       <nav class="col-4" id="sidebar">
-        <div class="brand-link">
+        <div class="brand-link mt-3">
           <span  class="brand-text font-weight-light"><mat-icon class="align-middle">menu</mat-icon> Menu</span>
         </div>
         <ul *ngIf="adminAble" class="list-unstyled components mb-5">
