--- a/frontend/src/app/dashboard/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/components/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
-<div class="card card-primary card-outline">
+<div class="card card-outline">
   <div class="card-header">
-    <h3 class="card-title">Rychlý přehled</h3>
+    <div class="card-title">Rychlý přehled</div>
   </div> <!-- /.card-body -->
   <div class="card-body">
     <div class="row">
