--- a/frontend/src/app/page/pages/page-create/page-create.component.html
+++ b/frontend/src/app/page/pages/page-create/page-create.component.html
@@ -1,6 +1,6 @@
-<div class="card card-primary card-outline">
+<div class="card card-outline">
   <div class="card-header">
-    <h3 class="card-title">Vytvořit stránku</h3>
+    <div class="card-title">Vytvořit stránku</div>
   </div> <!-- /.card-body -->
   <div class="card-body">
     <form [formGroup]="createPageForm">
