--- a/frontend/src/app/page/pages/page-list/page-list.component.html
+++ b/frontend/src/app/page/pages/page-list/page-list.component.html
@@ -1,6 +1,6 @@
-<div class="card card-primary card-outline">
+<div class="card card-outline">
   <div class="card-header">
-    <h3 class="card-title">Seznam vytvořených stránek</h3>
+    <div class="card-title">Seznam vytvořených stránek</div>
   </div> <!-- /.card-body -->
   <div class="card-body">
     <table mat-table [dataSource]="dataToTable">
@@ -8,7 +8,8 @@
       <!-- Position Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Název stránky</th>
-        <td mat-cell *matCellDef="let element">{{element.name}} <mat-icon [matTooltip]="'Přistávací stránka'"  fontIcon="star" *ngIf="element.homePage">*</mat-icon></td>
+        <td mat-cell *matCellDef="let element">{{element.name}}
+          <mat-icon [matTooltip]="'Přistávací stránka'"  fontIcon="star" *ngIf="element.homePage">*</mat-icon></td>
       </ng-container>
 
       <ng-container matColumnDef="action">
