--- a/frontend/src/app/plugin/pages/list-created/list-created.component.html
+++ b/frontend/src/app/plugin/pages/list-created/list-created.component.html
@@ -1,6 +1,6 @@
-<div class="card card-primary card-outline">
+<div class="card card-outline">
   <div class="card-header">
-    <h3 class="card-title">Seznam vlastních pluginů typu <b>{{pluginResolver.name}}</b></h3>
+    <div class="card-title">Seznam vlastních pluginů typu <b>{{pluginResolver.name}}</b></div>
   </div> <!-- /.card-body -->
   <div class="card-body">
     <table mat-table [dataSource]="createdPlugins" class="w-100">
