--- a/frontend/src/app/web/pages/web-create/create-name/create-name.component.html
+++ b/frontend/src/app/web/pages/web-create/create-name/create-name.component.html
@@ -1,6 +1,6 @@
-<div class="card card-primary card-outline">
+<div class="card card-outline">
   <div class="card-header">
-    <h3 class="card-title">Název nového webu</h3>
+    <div class="card-title">Název nového webu</div>
   </div>
   <div class="card-body">
     <form [formGroup]="form">
