--- a/frontend/src/app/web/pages/web-create/select-template/select-template.component.html
+++ b/frontend/src/app/web/pages/web-create/select-template/select-template.component.html
@@ -1,6 +1,6 @@
-<div class="card card-primary card-outline">
+<div class="card card-outline">
   <div class="card-header">
-    <h3 class="card-title">Vyberte šablonu</h3>
+    <div class="card-title">Vyberte šablonu</div>
   </div>
   <div class="card-body">
     <h4 class="text-center">Začněte vybráním šablony</h4>
