--- a/frontend/src/app/authorization/pages/authorization/authorization.component.html
+++ b/frontend/src/app/authorization/pages/authorization/authorization.component.html
@@ -1,25 +1,7 @@
-<div class="login-page" style="min-height: 586.391px;">
-<div class="login-box">
-  <div class="login-logo">
-    <a href="../../index2.html"><b>Admin</b>LTE</a>
-  </div>
-
-  <div class="card">
-    <mat-progress-bar appHiderElement [showOn]="symfonyApiCallEvent.startSendLogin" [hideOn]="symfonyApiCallEvent.stopSendLogin" class="progres-line" mode="indeterminate"></mat-progress-bar>
-    <div class="card-body register-card-body">
+<div class="js-fullheight img">
+  <section class="ftco-section">
+    <div class="container">
       <router-outlet></router-outlet>
     </div>
-    <!-- /.form-box -->
-  </div><!-- /.card -->
-</div>
-<!-- /.register-box -->
-
-<!-- jQuery -->
-<script src="../../plugins/jquery/jquery.min.js"></script>
-<!-- Bootstrap 4 -->
-<script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-<!-- AdminLTE App -->
-<script src="../../dist/js/adminlte.min.js"></script>
-
-
+  </section>
 </div>
